@@ -419,6 +419,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #13627: Add support for SSL Elliptic Curve-based Diffie-Hellman
+  key exchange, through the SSLContext.set_ecdh_curve() method and the
+  ssl.OP_SINGLE_ECDH_USE option.
+
 - Issue #13635: Add ssl.OP_CIPHER_SERVER_PREFERENCE, so that SSL servers
   choose the cipher based on their own preferences, rather than on the
   client's.
